Harfler ayrıştırıldı. TODO: tuhaf isaret silinecek

--- a/#7 Dosya-Odev/Dosya-Odev.ipynb
+++ b/#7 Dosya-Odev/Dosya-Odev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,7 @@
     "\n",
     "    \n",
     "    text = text.lower()\n",
+    "    \n",
     "     #Türkçe karakterleri ve internet sayfasında satır atlamalarını kaldırmak için\n",
     "    turkce_yabancı_sozluk = {'ç': 'c', 'ğ': 'g', 'ı': 'i', 'ö': 'o', 'ş': 's',\n",
     "    'ü': 'u', \"▼\": \"\", \"\\n\": \"\", \"'\": \"\"}\n",
@@ -108,7 +109,7 @@
     "             \n",
     "           \n",
     "    \n",
-    "    with open(\"en_cok_kullanılan_100_kelime.txt\", \"w\", encoding = \"utf-8\") as f:\n",
+    "    with open(\"en_cok_kullanılan_100_kelime.txt\", \"x\", encoding = \"utf-8\") as f:\n",
     "           for word in sorted_word_count:\n",
     "                f.write(word[0] + (len(uzun_kelime)//4 - len(word[0])) * \" \" )\n",
     "                for i in word[0]:\n",
